# BBCC

./: .gitignore  BBCC.spec  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.2.md  THIRD_PARTY_NOTICES.md  check_mapping.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_bbcc.py
assets/translations/: en.json  ja.json  ko.json  zh.json
config/hitmaps/: xbox_hitmap.json  zero2_hitmap.json
docs/: download-release.md  github-metadata.md  portfolio-case-study.md  release-checklist.md  safety-privacy.md  support-runbook.md
docs/readme/: README.en.md  README.ja.md  README.ko.md  README.zh-CN.md
reports/: ai_generated_code_risk_audit.md  dependency_supply_chain_audit.md  deployment_readiness_audit.md  final_release_decision.md  legal_license_compliance_audit.md  operations_incident_response_audit.md  performance_scalability_audit.md  post_build_audit.md  product_strategy_audit.md  project_summary.md  remediation_plan.md  remediation_summary.md  security_privacy_audit.md  testing_quality_audit.md
src/zero2_input_inspector/: __init__.py  application.py  identity.py  main.py  styles.py
src/zero2_input_inspector/backend/: __init__.py  base.py  models.py  pygame_backend.py
tests/: test_analog_scroll_behavior.py  test_check_mapping_script.py  test_main_window_mapping_selection.py  test_normalization_stick_vector_sources.py  test_pygame_backend_hardening.py  test_runtime_resource_paths.py  test_single_fire_mappings.py  test_theme_and_youtube_preset.py  test_xbox_fallback.py  test_xbox_media_fallback_load_path.py
(+31 files in other folders)
