[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zero2-input-inspector"
version = "1.0.0"
description = "Tray-resident Windows controller mapper and inspector for creative workflows."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyQt5>=5.15.11,<6",
    "pygame>=2.6.1,<3",
    "psutil>=7.2.2,<8",
    "pynput>=1.8.1,<2",
    "pywin32>=311",
]

[project.scripts]
zero2-input-inspector = "zero2_input_inspector.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
